2002-11-30  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Finish AT libplplottcltk.so* build when itcl and tk are enabled.

	* bindings/tk for AT: build and install plserver and *.tcl, *.itk,
	  and palette (*.pal) files.

	* acinclude.m4 copied (again) from cf/aclocal.m4 for AT branch to
	  pick up all the autoconf 2.5.3 changes.

2002-11-29  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Finish AT tcl binding.  These are only small fairly
	  non-consequential refinements that I did while trying to debug the
	  extended search problem (which had a simple solution which I will
	  discuss on list).

	* Prepare for the AT change in bindings/tk and bindings/tk-x-plat 
	  by dropping "plplot/" from the #include statements in the 
	  source files.
	
2002-11-28  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* AT build of libplplottcl (including a substantial reorganization
	  of configure.in).

	* AT build of utilities plrender, pltek, and pltcl.

	* AT reorganize src/Makefile.am, but no substantive changes.

2002-11-27  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Creation of python extension modules now works.  Replaced the
	  setup.py method (which had some cross-platform question marks)
	  with a libtools method.

	* Fixed build of xwin_drv.so so it links to libplplot.  Without this
	  the python examples won't work with the xwin driver.
	
	* Install of python examples including new plplot_python_start.py
	  which is configured to make accessible to python the
	  directory which contains the installed plplot python extensions
	  (assuming that might not be in the standard system location).

	* Fixed single precision bugs in bindings/c++/Makefile.am and
	  bindings/f77/Makefile.am.

2002-11-26  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Support for examples/c examples/c++ and examples/f77 on AT
	  branch.
	* Adopt Maurice's idea of initializing libltdl in pllib_init().
	* Makefile.examples using plplot_libtool, c works