@@ -1,3 +1,13 @@
+2002-12-01  Alan W. Irwin <irwin@beluga.phys.uvic.ca>
+
+	* Finish (nearly) all the dynamic driver builds for AT. Checked that
+	  gnome, png, xfig, ntk all worked.  Also, package require Plplotter
+	  (which accesses the tkwin_drv.so shared object) also works, and
+	  -dev tkwin works (although it simply returns the usual error
+	  message about no widget being available since this is not a
+	  stand-alone driver).  As far as I know, the only driver that still
+	  has errors under AT is tk.
+
 2002-11-30  Alan W. Irwin <irwin@beluga.phys.uvic.ca>
 
 	* Finish AT libplplottcltk.so* build when itcl and tk are enabled.
